# hecate

./: .gitignore  Cargo.toml  README.md  profile.json  test.c
compiler/ast/: Cargo.toml
compiler/ast/src/: ast_def.rs  lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: fix_instructions.rs  lib.rs  replace_pseudoregisters.rs
compiler/emission/: Cargo.toml
compiler/emission/src/: emission.rs  lib.rs
compiler/hecate_driver/: Cargo.toml
compiler/hecate_driver/src/: lib.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lex.rs  lib.rs
compiler/lir/: Cargo.toml
compiler/lir/src/: lib.rs  lir_def.rs  symbol_table.rs
compiler/mir/: Cargo.toml
compiler/mir/src/: lib.rs  print_tacky.rs  tacky.rs  tacky_gen.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: lib.rs  parser.rs
compiler/semantic_analysis/: Cargo.toml
compiler/semantic_analysis/src/: analyze_switches.rs  ident_resolution.rs  label_loops.rs  lib.rs  sem_err.rs  type_checker.rs  validate_labels.rs  var_res.rs
compiler/ty/: Cargo.toml
compiler/ty/src/: constant_converter.rs  lib.rs  scope.rs  types.rs
compiler/unique_ident/: Cargo.toml
compiler/unique_ident/src/: lib.rs
src/: assembly.rs  assembly_gen.rs  ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  tacky_gen.rs
src/codegen/: assembly_gen.rs  fix_instructions.rs  replace_pseudoregs.rs  tacky_gen.rs
src/lexer/: cursor.rs
writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/: double_invalid_identifier.c
writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/: hello_world.c
